deploy/backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: backend
  name: backend
  namespace: level-uphaken
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
  selector:
    service: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: backend
  name: backend
  namespace: level-uphaken
spec:
  selector:
    matchLabels:
      service: backend
  template:
    metadata:
      labels:
        service: backend
    spec:
      containers:
        - image: git.haw-hamburg.de:5005/level-uphaken/level-uphaken/backend:latest
          name: backend
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
      imagePullSecrets:
        - name: pull-secret
