deploy/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: level-uphaken
spec:
  ports:
  - port: 3306
  selector:
    app: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: level-uphaken
spec:
  selector:
    matchLabels:
      app: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - image: linuxserver/mariadb
        name: database
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: database-persistent-storage
          mountPath: /config
      volumes:
      - name: database-persistent-storage
        persistentVolumeClaim:
          claimName: level-uphaken-database-claim
