deploy/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: frontend
  name: frontend
  namespace: level-uphaken
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
  selector:
    service: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: frontend
  name: frontend
  namespace: level-uphaken
spec:
  selector:
    matchLabels:
      service: frontend
  template:
    metadata:
      labels:
        service: frontend
    spec:
      containers:
        - image: git.haw-hamburg.de:5005/level-uphaken/level-uphaken/frontend:latest
          name: frontend
          ports:
            - containerPort: 3000
              protocol: TCP
          imagePullPolicy: Always
      imagePullSecrets:
        - name: pull-secret
