deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/force-ssl-redirect: "true" 
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: default-ingress
  namespace: level-uphaken
spec:
  tls:
  - hosts:
    - level-uphaken.informatik.haw-hamburg.de
    secretName: ingress-secrets
  rules:
  - host: level-uphaken.informatik.haw-hamburg.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
      - path: /api/v1/
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
